--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.black]
 line-length = 100
 target-version = ["py39"]
-include = "\.(py|pyi)$"
+include = "\\.(py|pyi)$"
 
 [tool.ruff]
 line-length = 100
